refuse case handled